# DocScan

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle  gradle.properties  privacy_policy.md  settings.gradle
app/: CMakeLists.txt  CMakeListsSkel.txt  build.gradle  google-services.json
app/schemas/at.ac.tuwien.caa.docscan.db.AppDatabase/: 1.json  2.json
app/src/envTest/res/values/: strings.xml
app/src/jni/: Android.mk  Application.mk
app/src/main/: AndroidManifest.xml
app/src/main/cmake/: CMakeUserSkel.cmake  DocScan.cmake.in  DocScan.rc  Win.cmake
app/src/main/cmake/src-test/: main.cpp
app/src/main/cpp/: DkMath.cpp  DkMath.h  DocScanInterface.cpp  DocScanInterface.h  FocusMeasure.cpp  FocusMeasure.h  Illumination.cpp  Illumination.h  PageSegmentation.cpp  PageSegmentation.h  PageSegmentationUtils.cpp  PageSegmentationUtils.h  Utils.cpp  Utils.h
app/src/main/jni/: Android.mk  AndroidSkel.mk  Application.mk  CameraView.cpp  DkMath.cpp  DkMath.h  DocScanInterface.cpp  DocScanInterface.h  FocusMeasure.cpp  FocusMeasure.h  FocusMeasureDummy.cpp  FocusMeasureDummy.h  Illumination.cpp  NativeWrapper.cpp  NativeWrapper.h  PageSegmentation.cpp  PageSegmentation.h  PageSegmentationUtils.cpp  PageSegmentationUtils.h  Utils.cpp  opencv-jni.cpp
app/src/main/jni/local/: AndroidSkel.mk
app/src/main/res/: DocScan-icon.ai
app/src/main/res/anim/: book_animator.xml  page_animator.xml  phone_animator.xml  phone_capture_animator.xml  phone_wait_animator.xml  scale_out.xml  translate_in.xml  translate_left_to_right_in.xml  translate_left_to_right_out.xml  translate_out.xml  translate_right_to_left_in.xml  translate_right_to_left_out.xml
app/src/main/res/drawable/: action_bg.xml  activatedbackground.xml  book_animation.xml  camera_text_overlay_bg.xml  dark_to_transparent_gradient.xml  ic_account_box_black_24dp.xml  ic_add_black_24dp.xml  ic_add_circle_black_24dp.xml  ic_arrow_drop_down_white_24dp.xml  ic_baseline_file_present_badge_24.xml  ic_baseline_file_present_black_24.xml  ic_baseline_file_present_grey_24.xml  ic_baseline_image_search_24.xml  ic_baseline_picture_as_pdf_24px.xml  ic_baseline_picture_as_pdf_24px_gray.xml  ic_baseline_schedule_24.xml  ic_burst_mode_vector.xml  ic_camera_retake.xml  ic_close_white_24dp.xml  ic_cloud_done_black_24dp.xml  ic_cloud_done_blue_24dp.xml  ic_cloud_done_gray_24dp.xml  ic_cloud_queue_black_24dp.xml  ic_cloud_queue_blue_24dp.xml  ic_cloud_queue_gray_24dp.xml  ic_cloud_upload_black_24dp.xml  ic_cloud_upload_blue_24dp.xml  ic_cloud_upload_gray_24dp.xml  ic_cloud_upload_white_24dp.xml  ic_collections_black_24dp.xml  ic_collections_white_24dp.xml  ic_crop_rotate_white_24dp.xml  ic_crop_white_24dp.xml  ic_delete_black_24dp.xml  ic_delete_white_24dp.xml  ic_do_not_disturb_black_24dp.xml  ic_dropboxglyph_blue.xml  ic_flash_auto_32dp.xml  ic_flash_auto_white_24dp.xml  ic_flash_off_32dp.xml  (+84 more)
app/src/main/res/drawable-v21/: list_view_multi_selector.xml
app/src/main/res/layout/: activity_about.xml  activity_account.xml  activity_camera.xml  activity_collections.xml  activity_create_document.xml  activity_create_series.xml  activity_crop_view.xml  activity_debug_preferences.xml  activity_debug_settings.xml  activity_document.xml  activity_document_view.xml  activity_document_viewer.xml  activity_drive.xml  activity_dropbox.xml  activity_dropbox_authenticate.xml  activity_gallery.xml  activity_intro.xml  activity_licenses.xml  activity_login.xml  activity_logout.xml  activity_main.xml  activity_main_debug_view.xml  activity_map_crop_view.xml  activity_nested_preferences.xml  activity_not_logged_in.xml  activity_page_slide.xml  activity_pdf.xml  activity_pdf_selector.xml  activity_preferences.xml  activity_rest.xml  activity_segmentation.xml  activity_select_document.xml  activity_series_general.xml  activity_settings.xml  activity_share_log.xml  activity_sync.xml  activity_test_sync.xml  activity_upload.xml  activity_uploading.xml  activity_viewer.xml  (+56 more)
app/src/main/res/layout-land/: activity_intro.xml  activity_main.xml  camera_controls_layout.xml  fragment_intro_3.xml
app/src/main/res/layout-v21/: fragment_intro_1.xml  fragment_intro_2.xml  fragment_intro_4.xml  selection_cardview.xml
app/src/main/res/menu/: actionbar_menu.xml  camera_bottom_menu.xml  camera_menu.xml  camera_settings_bottom_menu.xml  crop_menu.xml  document_navigation_menu.xml  documents_bottom_menu.xml  drawer_menu.xml  drawer_view.xml  drawer_view_menu.xml  exports_menu.xml  flash_mode_menu.xml  gallery_menu.xml  image_view_menu.xml  images_action_menu.xml  images_menu.xml  images_selected_menu.xml  map_menu.xml  page_slide_menu.xml  pdfs_bottom_menu.xml  rotate_text_direction_menu.xml  series_menu.xml  shoot_mode_menu.xml  sync_menu.xml  white_balance_menu.xml
app/src/main/res/navigation/: document_nav.xml  images_nav.xml  pdfs_nav.xml
app/src/main/res/transition/: image_shared_element_transition.xml
app/src/main/res/values/: bools.xml  colors.xml  dimens.xml  (+8 more)
app/src/main/res/values-v19/: dimens.xml  plural_strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/rs/: rotator.rs
(+525 files in other folders)
